# ScaViSLAM

./: .gitignore  .gitmodules  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
CMakeModules/: FindG2O.cmake
cmake/: definitions.cmake
scavislam/: backend.cpp  backend.h  data_structures.h  dense_tracking.cpp  frame_grabber-impl.cpp  frame_grabber.hpp  framedata-impl.cpp  framedata.cpp  framedata.hpp  keyframes.h  matcher.cpp  matcher.hpp  maths_utils.h  placerecognizer.cpp  placerecognizer.h  pose_optimizer.h  slam_graph-impl.cpp  slam_graph.cpp  slam_graph.hpp  stereo_frontend.cpp  stereo_frontend.h  stereo_slam.cpp  transformations.h
scavislam/g2o_types/: anchored_points.cpp  anchored_points.h
